hphp/hack/test/typecheck/let/let_subtype_error.php.exp
File "let_subtype_error.php", line 10, characters 18-25:
Wrong type hint (Typing[4110])
File "let_subtype_error.php", line 10, characters 18-25:
Expected Subclass
File "let_subtype_error.php", line 10, characters 33-36:
But got Base
